refactor(config): retire Optional from stored fields
Deliverables 1-2: the 26 config-model record components and the 10 RouteRuntime/stage field declarations drop their Optional wrapper for the JSpecify @Nullable type model, with the pre-existing test files updated to the new getter and builder signatures. No asserted value moves; ThoroughChecksStage's fail-closed fallback keeps its behaviour behind requireNonNullElse.